code/force-app/main/default/objects/Account/fields/PreOccupy_End_Date__c.field-meta.xml
<CustomField>
    <fullName>PreOccupy_End_Date__c</fullName>
    <label>預佔結束日期</label>
    <type>Date</type>
</CustomField>