code/force-app/main/default/objects/Account/fields/PreOccupy_Remain_Days__c.field-meta.xml
<CustomField>
    <fullName>PreOccupy_Remain_Days__c</fullName>
    <formula>IF(
    (PreOccupy_End_Date__c - TODAY()) &lt; 0,
    0,
    (PreOccupy_End_Date__c - TODAY())
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>預佔剩餘天數</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>