code/force-app/main/default/objects/Account/fields/PreOccupy_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>PreOccupy_Start_Date__c</fullName>
    <label>預佔開始日期</label>
    <type>Date</type>
</CustomField>