code/force-app/main/default/objects/Account/fields/Prior_PreOccupy_RM__c.field-meta.xml
<CustomField>
    <fullName>Prior_PreOccupy_RM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>前一預佔者</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts2</relationshipName>
    <type>Lookup</type>
</CustomField>