code/force-app/main/default/objects/Account/fields/RAROC__c.field-meta.xml
<CustomField>
    <fullName>RAROC__c</fullName>
    <label>RAROC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>