code/force-app/main/default/objects/Account/fields/Registered_Address__c.field-meta.xml
<CustomField>
    <fullName>Registered_Address__c</fullName>
    <label>註冊地址</label>
    <type>Address</type>
</CustomField>