code/force-app/main/default/objects/Account/fields/Release_Date__c.field-meta.xml
<CustomField>
    <fullName>Release_Date__c</fullName>
    <formula>PreOccupy_End_Date__c +1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>釋出日期</label>
    <type>Date</type>
</CustomField>