code/force-app/main/default/objects/Account/fields/Representative__c.field-meta.xml
<CustomField>
    <fullName>Representative__c</fullName>
    <label>公司負責人</label>
    <length>100</length>
    <type>Text</type>
</CustomField>