code/force-app/main/default/objects/Account/fields/Representative_ID__c.field-meta.xml
<CustomField>
    <fullName>Representative_ID__c</fullName>
    <label>公司負責人 ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>