code/force-app/main/default/objects/Account/fields/Request_Release__c.field-meta.xml
<CustomField>
    <fullName>Request_Release__c</fullName>
    <defaultValue>false</defaultValue>
    <label>已延長釋出</label>
    <type>Checkbox</type>
</CustomField>