code/force-app/main/default/objects/Account/fields/Residential_Address__c.field-meta.xml
<CustomField>
    <fullName>Residential_Address__c</fullName>
    <label>居住地地址</label>
    <type>Address</type>
</CustomField>