code/force-app/main/default/objects/Account/fields/Responsible_RM__c.field-meta.xml
<CustomField>
    <fullName>Responsible_RM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>開發中 RM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>