code/force-app/main/default/objects/Account/fields/Risk_Alert__c.field-meta.xml
<CustomField>
    <fullName>Risk_Alert__c</fullName>
    <label>風險警示</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>