code/force-app/main/default/objects/Account/fields/Risk_Classification__c.field-meta.xml
<CustomField>
    <fullName>Risk_Classification__c</fullName>
    <label>暴險分類</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>01-主權國家</fullName>
            </value>
            <value>
                <fullName>02-國際清算銀行</fullName>
            </value>
            <value>
                <fullName>03-地方政府及非營利國營部門</fullName>
            </value>
            <value>
                <fullName>04-營利性質之國營事業</fullName>
            </value>
            <value>
                <fullName>05-風險權數為零之多邊開發銀行</fullName>
            </value>
            <value>
                <fullName>06-其他多邊開發銀行</fullName>
            </value>
            <value>
                <fullName>07-銀行</fullName>
            </value>
            <value>
                <fullName>10-循環零售型(自然人)</fullName>
            </value>
            <value>
                <fullName>11-其他零售型(自然人)</fullName>
            </value>
            <value>
                <fullName>18-中小企業(符合經濟部中小企業認定標準)</fullName>
            </value>
            <value>
                <fullName>19-企業-合併年營業額小於新台幣2億(不含中小企業)</fullName>
            </value>
            <value>
                <fullName>20-企業-合併年營業額大於(含)新台幣2億小於新台幣20億</fullName>
            </value>
            <value>
                <fullName>21-企業-合併年營業額大於(含)新台幣20億</fullName>
            </value>
            <value>
                <fullName>暴險分類</fullName>
                <isActive>false</isActive>
                <label>暴險分類</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>