code/force-app/main/default/objects/Account/fields/Risk_Country__c.field-meta.xml
<CustomField>
    <fullName>Risk_Country__c</fullName>
    <label>風險國家</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country</valueSetName>
    </valueSet>
</CustomField>