code/force-app/main/default/objects/Account/fields/RORWA__c.field-meta.xml
<CustomField>
    <fullName>RORWA__c</fullName>
    <label>RORWA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>