code/force-app/main/default/objects/Account/fields/Salesforce_Referral_No__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Referral_No__c</fullName>
    <label>Salesforce轉介單號(法轉法)</label>
    <length>30</length>
    <type>Text</type>
</CustomField>