code/force-app/main/default/objects/Account/fields/Stock_Code__c.field-meta.xml
<CustomField>
    <fullName>Stock_Code__c</fullName>
    <label>股票代號</label>
    <length>18</length>
    <type>Text</type>
</CustomField>