code/force-app/main/default/objects/Account/fields/Sub_Industry__c.field-meta.xml
<CustomField>
    <fullName>Sub_Industry__c</fullName>
    <label>主計處行業別子類</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Industry__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>農、牧業</fullName>
            </value>
            <value>
                <fullName>林業</fullName>
            </value>
            <value>
                <fullName>電子零組件製造業</fullName>
            </value>
            <value>
                <fullName>電腦、電子產品及光學製品製造業</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>