code/force-app/main/default/objects/Account/fields/TCRI__c.field-meta.xml
<CustomField>
    <fullName>TCRI__c</fullName>
    <label>TCRI</label>
    <length>2</length>
    <type>Text</type>
</CustomField>