code/force-app/main/default/objects/Account/fields/TEJ_Address__c.field-meta.xml
<CustomField>
    <fullName>TEJ_Address__c</fullName>
    <label>商工登記地址</label>
    <type>Address</type>
</CustomField>