code/force-app/main/default/objects/Account/fields/TMRAC__c.field-meta.xml
<CustomField>
    <fullName>TMRAC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TMRAC</label>
    <type>Checkbox</type>
</CustomField>