code/force-app/main/default/objects/Account/fields/TMU__c.field-meta.xml
<CustomField>
    <fullName>TMU__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TMU</label>
    <type>Checkbox</type>
</CustomField>