code/force-app/main/default/objects/Account/fields/Total_Capital__c.field-meta.xml
<CustomField>
    <fullName>Total_Capital__c</fullName>
    <label>資本總額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>