code/force-app/main/default/objects/Account/fields/Trade_Finance_Balance__c.field-meta.xml
<CustomField>
    <fullName>Trade_Finance_Balance__c</fullName>
    <label>貿融餘額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>