code/force-app/main/default/objects/Account/recordTypes/Company.recordType-meta.xml
<RecordType>
    <fullName>Company</fullName>
    <active>true</active>
    <description>CUB 法人戶</description>
    <label>法人</label>
</RecordType>