code/force-app/main/default/objects/Account/recordTypes/FinServ__IndustriesInstitution.recordType-meta.xml
<RecordType>
    <fullName>FinServ__IndustriesInstitution</fullName>
    <active>true</active>
    <description>An institution that is a prospect or a client</description>
    <label>Institution</label>
</RecordType>