code/force-app/main/default/objects/Account/recordTypes/Group.recordType-meta.xml
<RecordType>
    <fullName>Group</fullName>
    <active>true</active>
    <description>CUB 集團戶</description>
    <label>集團戶</label>
</RecordType>