code/force-app/main/default/objects/Account/validationRules/AccountNameCanOnlyInCHandEN.validationRule-meta.xml
<ValidationRule>
    <fullName>AccountNameCanOnlyInCHandEN</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(
  REGEX(
    Name, 
    &quot;^[a-z A-Z\\u4E00-\\u9FFF]+$&quot;
  )
)</errorConditionFormula>
    <errorMessage>帳戶名稱請使用中文或英文字維護!</errorMessage>
</ValidationRule>